--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     working_directory: ~/serverless
 
     steps:
+      - checkout
       - run:
           name: Install packages
           command: |
